--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.635.0",
     "@aws-sdk/s3-presigned-post": "^3.635.0",
+    "@aws-sdk/s3-request-presigner": "^3.637.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/storage": "^7.12.1",
+    "@google-cloud/video-intelligence": "^5.3.0",
+    "@google-cloud/vision": "^4.3.2",
     "@tanstack/react-query": "^5.52.1",
     "@tanstack/react-query-devtools": "^5.52.1",
     "axios": "^1.7.4",
+    "fluent-ffmpeg": "^2.1.3",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
